<resources>
    <string name="app_name">Pokemon-Daws</string>
    <string name="title_string">DAWSON EDITION</string>
    <string name="new_game_string">NEW GAME</string>
    <string name="load_game_string">LOAD GAME</string>
    <string name="developer_credits_string">Raagav Prasanna, Aidan Catriel, Vinuyan Sivakolunthu</string>
    <string name="name_pick_string">Trainer, please enter your name</string>
    <string name="next_string">NEXT</string>
    <string name="trainer_name_hint">Ash Ketchum</string>
    <string name="starter_selection_string">Choose your starter Pokemon!</string>
    <string name="bulbasaur">bulbasaur</string>
    <string name="charmander">charmander</string>
    <string name="squirtle">squirtle</string>
    <string name="main_menu_header_string">What would you like to do?</string>
    <string name="wild_encounter_button_string">ENCOUNTER WILD POKEMON</string>
    <string name="trainer_battle_button_string">BATTLE TRAINER</string>
    <string name="pokecenter_button_string">HEAL POKEMON</string>
    <string name="change_team_button_string">CHANGE TEAM</string>
    <string name="save_button_string">SAVE GAME</string>
    <string name="enter_name_toast">Trainer please select a name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fight">Fight</string>
    <string name="item">Item</string>
    <string name="pokemon">Pokemon</string>
    <string name="run">Run</string>
    <string name="potion">Potion</string>
    <string name="pokeball">Pokeball</string>
    <string name="trainer_message_default">trainer_message</string>
    <string name="opponent_message_default">opponent_message</string>
    <string name="move_name_default">Move Name</string>
    <string name="trainer_sprite_desc">Trainer Sprite</string>
    <string name="opponent_sprite_desc">Opponent Sprite</string>
</resources>