<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/main_menu_header_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_header_string"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selection_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintTop_toBottomOf="@id/main_menu_header_msg">

    <Button
        android:id="@+id/wild_encounter_button"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:text="@string/wild_encounter_button_string"
        app:layout_constraintLeft_toLeftOf="@id/selection_layout"
        app:layout_constraintBottom_toBottomOf="@id/selection_layout"
        app:layout_constraintRight_toLeftOf="@id/trainer_battle_button"
        app:layout_constraintTop_toBottomOf="@id/change_team_button"/>



    <Button
        android:id="@+id/trainer_battle_button"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:text="@string/trainer_battle_button_string"
        app:layout_constraintRight_toRightOf="@id/selection_layout"
        app:layout_constraintBottom_toBottomOf="@id/selection_layout"
        app:layout_constraintLeft_toRightOf="@id/wild_encounter_button"
        app:layout_constraintTop_toBottomOf="@id/pokecenter_button"/>


    <Button
        android:id="@+id/pokecenter_button"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:text="@string/pokecenter_button_string"
        app:layout_constraintRight_toRightOf="@id/selection_layout"
        app:layout_constraintTop_toTopOf="@id/selection_layout"
        app:layout_constraintLeft_toRightOf="@id/change_team_button"
        app:layout_constraintBottom_toTopOf="@id/trainer_battle_button"/>



    <Button
        android:id="@+id/change_team_button"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:text="@string/change_team_button_string"
        app:layout_constraintLeft_toLeftOf="@id/selection_layout"
        app:layout_constraintTop_toTopOf="@id/selection_layout"
        app:layout_constraintBottom_toTopOf="@id/wild_encounter_button"
        app:layout_constraintRight_toLeftOf="@id/pokecenter_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/save_button_string"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selection_layout"
        android:layout_marginBottom="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>