<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BattleMenu">

    <Button
        android:id="@+id/fight_btn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/fight"
        app:layout_constraintBottom_toTopOf="@+id/pokemon_btn"
        app:layout_constraintEnd_toStartOf="@+id/item_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/item_btn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/item"
        app:layout_constraintBottom_toTopOf="@+id/run_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fight_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pokemon_btn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/pokemon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/run_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fight_btn" />

    <Button
        android:id="@+id/run_btn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/run"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pokemon_btn"
        app:layout_constraintTop_toBottomOf="@+id/item_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>