<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StarterSelection">

    <ImageView
        android:id="@+id/starter_sprite"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/bulbasaur_starter_sprite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/starter_selection_text"/>

    <TextView
        android:id="@+id/starter_selection_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starter_selection_string"
        app:layout_constraintTop_toBottomOf="@id/starter_sprite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/starter_name_edit_text"
        android:paddingTop="50dp"/>

    <EditText
        android:id="@+id/starter_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starter_selection_text"
        app:layout_constraintBottom_toTopOf="@id/starter_selection_text"
        android:hint="Enter a nickname (optional)"/>

    <LinearLayout
        android:id="@+id/starter_selection_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/starter_name_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_button_starter_selection">

        <ImageView
            android:id="@+id/select_bulbasaur"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:src="@drawable/pokemon_selection_sprite"
            android:contentDescription="@string/bulbasaur"/>



        <ImageView
            android:id="@+id/select_charmander"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/pokemon_selection_sprite"
            android:contentDescription="@string/charmander"/>

        <ImageView
            android:id="@+id/select_squirtle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:src="@drawable/pokemon_selection_sprite"
            android:contentDescription="@string/squirtle"/>

    </LinearLayout>

    <Button
        android:id="@+id/next_button_starter_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_string"
        app:layout_constraintTop_toBottomOf="@id/starter_selection_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>