<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/pokemon_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/pokemon_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/daws_edition_text"/>
    <TextView
        android:id="@+id/daws_edition_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_string"
        app:layout_constraintTop_toBottomOf="@id/pokemon_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/title_charizard"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:src="@drawable/title_pokemon"
        app:layout_constraintTop_toBottomOf="@id/daws_edition_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_string"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_charizard"
        app:layout_constraintBottom_toTopOf="@id/developers_text"
        app:layout_constraintRight_toLeftOf="@id/load_game_button"/>

    <Button
        android:id="@+id/load_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_game_string"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_charizard"
        app:layout_constraintBottom_toTopOf="@id/developers_text"
        app:layout_constraintLeft_toRightOf="@id/new_game_button"/>

    <TextView
        android:id="@+id/developers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_credits_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>