<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameSelection">

    <ImageView
        android:id="@+id/intro_trainer"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/trainer_sprite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/pick_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_pick_string"
        app:layout_constraintTop_toBottomOf="@id/intro_trainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="30dp"/>

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pick_name_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="50dp"
        android:hint="@string/trainer_name_hint"/>
    
    <Button
        android:id="@+id/next_button_trainer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_string"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>